为dbentity生成serializer